--- a/SpringTest/build.gradle
+++ b/SpringTest/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 group = 'ch.noseryoung'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '12'
+sourceCompatibility = '11'
 
 repositories {
 	mavenCentral()
@@ -22,6 +22,11 @@ dependencies {
 	// Dependencies for databases, in this application PostgreSQL
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	runtimeOnly 'org.postgresql:postgresql'
+
+	// Dependencies for MapStruct
+	implementation "org.mapstruct:mapstruct:1.3.0.Final"
+	annotationProcessor "org.mapstruct:mapstruct-processor:1.3.0.Final"
+	testAnnotationProcessor "org.mapstruct:mapstruct-processor:1.3.0.Final"
 
 	// Dependencies for testing purposes
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
