--- a/SpringTest/gradle/wrapper/gradle-wrapper.properties
+++ b/SpringTest/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Thu Apr 02 12:00:19 CEST 2020
+#Fri Mar 13 15:19:44 CET 2020
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.2.2-all.zip
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.2.2-all.zip
+zipStoreBase=GRADLE_USER_HOME
