--- a/SpringTest/build.gradle
+++ b/SpringTest/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 group = 'ch.noseryoung'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+sourceCompatibility = '12'
 
 repositories {
 	mavenCentral()
@@ -16,12 +16,20 @@ dependencies {
 	// Dependencies for security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
+	// Dependencies for JWT
+	implementation "io.jsonwebtoken:jjwt:0.9.1"
+
 	// Dependencies for REST-API
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
 	// Dependencies for databases, in this application PostgreSQL
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	runtimeOnly 'org.postgresql:postgresql'
+
+	// Swagger
+	implementation "io.springfox:springfox-swagger2:2.9.2"
+	implementation "io.springfox:springfox-swagger-ui:2.9.2"
+	implementation "io.springfox:springfox-bean-validators:2.9.2"
 
 	// Dependencies for MapStruct
 	implementation "org.mapstruct:mapstruct:1.3.0.Final"
